# rspi-bios

./: .gitignore  .markdownlint.rb  .pre-commit-config.yaml  Cargo.toml  README.md  askama.toml  build.rs  eslint.config.js  index.html  package-lock.json  package.json  rspi-bios.service
.github/workflows/: publish.yml
assets/: index.html  script.js
debian/: postinst  rspi-bios.service
src/: main.rs
templates/: index.html
web/: biome.json  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: App.svelte  app.css  helpers.ts  main.ts
web/src/lib/: Counter.svelte  helpers.ts
web/src/lib/pages/: Ascii.svelte  Boot.svelte  SpecTable.svelte
web/src/lib/screens/: ScanDisk.svelte  Startup.svelte
web/src/lib/screens/pages/: Ascii.svelte  Boot.svelte  SpecTable.svelte
