[package]
name = "rspi-bios"
authors = ["Piotr Placzek <piotrpdev@gmail.com>"]
version = "0.1.0"
edition = "2021"
repository = "https://github.com/piotrpdev/rspi-bios"
license = "GPL-3.0"
publish = false
rust-version = "1.74"

[dependencies]
askama = { version = "0.12.1", default-features = false }
axum = { version = "0.7.5", default-features = false, features = ["tokio", "http1"] }
sysinfo = { version = "0.31.2", default-features = false, features = ["disk", "network", "system", "multithread"] }
tokio = { version = "1.0", features = ["rt-multi-thread"] }
tokio-stream = { version = "0.1.15", features = ["sync"] }
tower-http = { version = "0.5.0", features = ["trace"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
