[package]
name = "rspi-bios"
version = "1.0.0"
authors = ["Piotr Placzek <piotrpdev@gmail.com>"]
edition = "2021"
rust-version = "1.74"
description = "Raspberry Pi dashboard that mimics the style of old BIOS designs."
repository = "https://github.com/piotrpdev/rspi-bios"
license = "GPL-3.0"
keywords = ["rust", "raspberry-pi", "sse", "bios", "axum"]
categories = ["command-line-utilities"]
publish = false

[package.metadata.deb]
license-file = ["LICENSE", "0"]
extended-description = """\
Raspberry Pi dashboard that mimics the style of old BIOS designs.
- Served by a Rust-powered web server
- Displays real system data from the Raspberry Pi
- Implements Server-Sent Events (SSE) for real-time updates
- Uses templating for HTML generation
- Mimics old BIOS designs
- Served over HTTPS"""
section = "web"
maintainer-scripts = "debian/"
systemd-units = { enable = false }
assets = [
    ["target/release/rspi-bios", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/rspi-bios/README", "644"],
    ["templates/index.html", "usr/share/rspi-bios/html/index.html", "644"],
    ["certs/.placeholder", "etc/rspi-bios/certs/.placeholder", "644"],
]

[dependencies]
anyhow = "1.0.86"
askama = { version = "0.12.1", default-features = false, features = ["config"] }
axum = { version = "0.7.5", default-features = false, features = ["tokio", "http1"] }
axum-server = { version = "0.7.1", features = ["tls-rustls"] }
clap = { version = "4.5.17", features = ["derive"]}
sysinfo = { version = "0.31.2", default-features = false, features = ["disk", "network", "system", "multithread"] }
tokio = { version = "1.4.0", features = ["rt-multi-thread", "signal"] }
tokio-stream = { version = "0.1.15", features = ["sync"] }
tower-http = { version = "0.5.0", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[lints.rust]
unsafe_code = "forbid"
unused_imports = "deny"
unused_variables = "deny"
unused_must_use = "deny"
dead_code = "warn"
missing_docs = "allow"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
redundant_pub_crate = "allow"
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
unreachable = "deny"
todo = "deny"
unimplemented = "deny"
await_holding_lock = "deny"
indexing_slicing = "deny"
float_cmp = "deny"
modulo_one = "deny"
